--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/sstover25/food-festival#readme",
   "devDependencies": {
+    "file-loader": "^6.2.0",
     "webpack": "^5.72.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2"
@@ -26,6 +27,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^4.6.1",
+    "image-webpack-loader": "^8.1.0",
     "jquery": "^3.6.0",
     "save": "^2.5.0"
   }
