--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "food-festival",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "assets/js/script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack --watch",
-    "build": "webpack"
+    "build": "webpack",
+    "start:dev": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -17,18 +18,17 @@
   "bugs": {
     "url": "https://github.com/sstover25/food-festival/issues"
   },
-  "homepage": "https://github.com/sstover25/food-festival#readme",
   "devDependencies": {
     "file-loader": "^6.2.0",
+    "image-webpack-loader": "^8.1.0",
     "webpack": "^5.72.0",
     "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.5",
     "bootstrap": "^4.6.1",
-    "image-webpack-loader": "^8.1.0",
     "jquery": "^3.6.0",
-    "save": "^2.5.0"
+    "popper.js": "^1.16.1"
   }
 }
