--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "webpack-pwa-manifest": "^4.3.0"
   },
   "dependencies": {
-    "bootstrap": "^4.6.1",
-    "jquery": "^3.6.0",
-    "popper.js": "^1.16.1"
+    "bootstrap": "^5.1.3",
+    "jquery": "^3.6.0"
   }
 }
